[project]
name = "mcp-server-dexcom-health"
version = "0.2.0"
description = "MCP server for Dexcom CGM glucose data - continuous health intelligence for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ishaan Sharma", email = "ishaan02@hotmail.com"}
]
keywords = [
    "dexcom",
    "cgm",
    "glucose",
    "diabetes",
    "mcp",
    "model-context-protocol",
    "health",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "pydexcom>=0.5.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[project.scripts]
mcp-server-dexcom-health = "mcp_server_dexcom.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_dexcom"]
